update logo and function select box....

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -31,10 +31,10 @@
         <%= form.label :available, class: label_class %>
           <%= form.check_box :available, class: input_class %>
       </div>
-  <div class="mb-6">
-        <%= form.label :subject_id, class: label_class %>
-          <%= form.text_field :subject_id, class: input_class %>
-      </div>
+      <div class="mb-6">
+      <%= form.label :subject_id, class: label_class %>
+      <%= form.select :subject_id, options_from_collection_for_select(Subject.all, 'id', 'name', book.subject_id), class: input_class %>
+    </div>
 
 <%= form.submit class: button_class(theme: 'primary') %>
 
